package.json slightly changed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://Carlston325.github.io/carlstons-coffee/?v=1",
   "name": "carlstons_coffee",
   "version": "1.0.0",
-  "homepage": "https://Carlston325.github.io/carlstons-coffee",
   "description": "",
   "main": "index.js",
   "type": "module",
