few html adjustments

--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "homepage": "https://Carlston325.github.io/carlstons-coffee",
   "name": "carlstons_coffee",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build --prefix client",
-    "deploy": "gh-pages -d client/build",
-    "start": "concurrently \"npm run server\" \"npm run giftcard\" \"npm run client\"",
-    "build": "npm run build --prefix client",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "nodemon server.js",
-    "giftcard": "cross-env PORT=3001 npm start --prefix giftcard",
     "client": "npm start --prefix client"
   },
   "keywords": [],
-  "author": "Carlston Rebelo",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.13.0",
@@ -24,14 +19,14 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
-    "axios": "^1.7.4",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "react-router-dom": "^6.26.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.12"
   },
