--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "gh-pages": "^6.1.1",
