--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://carlston325.github.io/",
+  "homepage": "https://carlston325.github.io/carlstons-coffee",
   "name": "carlstons_coffee",
   "version": "1.0.0",
   "description": "",
